# samba-virusfilter

./: .gitignore  CHANGES  INSTALL  Makefile.in  README  README.md  TODO  aclocal.m4  configure.in  wscript  wscript_build
buildtools/wafsamba/: stale_files.py
clamav/: Makefile  clamdscan.rb  sav-clamav.c  svf-clamav.c  virusfilter-clamav.c
contrib/: SVF_SCAN_RESULTS_CACHE_TALLOC.patch  VIRUSFILTER_SCAN_RESULTS_CACHE_TALLOC.patch
docs-xml/: vfs_svf_clamav.8.xml  vfs_svf_fsav.8.xml  vfs_svf_sophos.8.xml  vfs_virusfilter_clamav.8.xml  vfs_virusfilter_fsav.8.xml  vfs_virusfilter_sophos.8.xml  wscript_build
docs-xml/manpages/: vfs_virusfilter_clamav.8.xml  vfs_virusfilter_fsav.8.xml  vfs_virusfilter_sophos.8.xml
etc/: Makefile  savdid.conf  smb.svf-clamav.conf.tmpl  smb.svf-fsav.conf.tmpl  smb.svf-sophos.conf.tmpl
example/: sav-notify.ksh
examples/scripts/vfs/virusfilter/: clamdscan.rb  fsav.rb
examples/virusfilter/: smb.virusfilter-fsav.conf.tmpl  smb.virusfilter-sophos.conf.tmpl
f-secure/: Makefile  sav-fsav.c  svf-fsav.c  virusfilter-fsav.c
include/: sav-common.h  sav-config.h  sav-utils.h  sav-vfs.h  svf-common.h  svf-utils.h  svf-vfs.h  virusfilter-common.h  virusfilter-utils.h
lib/util/: util_env.c  util_env.h  wscript_build
sbin/: Makefile  fsavd-svconf.sh  savdid-svconf.sh
sophos/: Makefile  sav-sophos.c  svf-sophos.c  virusfilter-sophos.c
source3/: wscript
source3/auth/: auth_util.c
source3/groupdb/: mapping.c
source3/include/: proto.h
source3/lib/: smbrun.c
source3/modules/: Makefile  vfs_tsmsm.c  vfs_virusfilter_clamav.c  vfs_virusfilter_common.h  vfs_virusfilter_fsav.c  vfs_virusfilter_sophos.c  vfs_virusfilter_utils.c  vfs_virusfilter_utils.h  vfs_virusfilter_vfs.c  wscript_build
source3/passdb/: pdb_interface.c
source3/printing/: print_generic.c
source3/rpc_server/spoolss/: srv_spoolss_nt.c
source3/rpc_server/srvsvc/: srv_srvsvc_nt.c
source3/rpc_server/winreg/: srv_winreg_nt.c
source3/services/: svc_rcinit.c
source3/smbd/: close.c  message.c  service.c
test/: Makefile  Makefile.in
test/case/: clamav.ksh  common.ksh  f-secure.ksh  sophos.ksh
test/lib/: package.ksh.tmpl  smbd.wrapper  test.ksh
testsuite/vfs_virusfilter/: Makefile.in
testsuite/vfs_virusfilter/case/: clamav.ksh  common.ksh
testsuite/vfs_virusfilter/etc/: clamd.conf.tmpl  fsavd.conf.tmpl  savdid.conf.tmpl
testsuite/vfs_virusfilter/lib/: smbd.wrapper.tmpl  test.ksh
utils/: Makefile  sav-utils.c  svf-utils.c  virusfilter-utils.c
